# geospatial-intel

./: .gitignore  Dockerfile  IMPLEMENTATION.md  LICENSE  README.md  go.mod  go.sum  integration_test.sh  main.go  mem_final_ultra.pprof
.claude/: settings.local.json
.github/workflows/: ci.yml
entity/: entity.go
frontend_wasm/: Cargo.toml
frontend_wasm/src/: lib.rs
seeder/: ais.go  opensky.go  seeder.go  seeder_test.go
server/: handler.go  hub.go  hub_test.go  osint.db  osint.db-journal  server.go  server_test.go
spatial/: bench_test.go  index.go  index_test.go  trace_test.go  viewport.go
spatial_engine/: Cargo.toml
spatial_engine/src/: lib.rs
store/: store.go  store_test.go
util/: metrics.go
