[package]
name = "frontend_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
console_error_panic_hook = { version = "0.1", optional = true }
web-sys = { version = "0.3", features = ["console"] }

[features]
default = ["console_error_panic_hook"]
